.provarCaches/00D6C0000000xA6UAI/objects/sked__Availability__c.object
<CustomObject>
    <description>Exceptions to the standard availability template for this user</description>
    <fields>
        <fullName>Status_Updated_At__c</fullName>
        <label>Status Updated At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_Updated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Status Updated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Availabilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked__Finish__c</fullName>
        <label>Finish</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sked__Is_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, the resources is available for work, if not checked, they are are unavailable</inlineHelpText>
        <label>Is Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sked__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sked__Resource__c</fullName>
        <label>Resource</label>
        <referenceTo>sked__Resource__c</referenceTo>
        <relationshipLabel>Availabilities</relationshipLabel>
        <relationshipName>Availabilities1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>sked__Start__c</fullName>
        <label>Start</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sked__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sked__Timezone__c</fullName>
        <label>Timezone</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked__Type__c</fullName>
        <description>What type of availability/unavailability</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>Leave</fullName>
                </value>
                <value>
                    <fullName>Occupied</fullName>
                </value>
                <value>
                    <fullName>Availability Release</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Availability</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AVAIL-{0000}</displayFormat>
        <label>Availability Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Availabilities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>sked__StartFinishDateCheck</fullName>
        <active>true</active>
        <errorConditionFormula>sked__Start__c &gt; sked__Finish__c</errorConditionFormula>
        <errorDisplayField>sked__Finish__c</errorDisplayField>
        <errorMessage>Start Date cannot be after the Finish Date</errorMessage>
    </validationRules>
</CustomObject>